# elevator-vibration-analysis

./: .gitignore  README.md  pyproject.toml
data/: analysis_report.md
data/samples/: S0783L01A_2026-04-29_trip1.jsonl  S0783L01A_2026-04-29_trip10.jsonl  S0783L01A_2026-04-29_trip100.jsonl  S0783L01A_2026-04-29_trip101.jsonl  S0783L01A_2026-04-29_trip102.jsonl
data/samples/march30/: 2026-03-30T05:30:36:598915-2026-03-30T05:31:13:634498-f1-t10.jsonl  2026-03-30T07:36:31:367591-2026-03-30T07:37:08:741615-f1-t10.jsonl  2026-03-30T17:22:38:079049-2026-03-30T17:22:53:783937-f10-t12.jsonl  2026-03-30T17:22:59:207852-2026-03-30T17:23:15:726047-f12-t14.jsonl  2026-03-30T17:23:22:554489-2026-03-30T17:23:35:883600-f14-t13.jsonl
docs/: high-level-report.md
notebooks/: exploration.ipynb
src/elevator_vibration/: __init__.py  data_loader.py  diagnostics.py  frequency.py  kinematics.py  preprocessing.py  ride_quality.py  state_detection.py  time_domain.py  visualization.py
