[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevator-vibration-analysis"
version = "0.1.0"
description = "Elevator triaxial vibration data analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pywavelets>=1.4",
    "seaborn>=0.12",
    "plotly>=5.14",
    "tqdm>=4.65",
    "h5py>=3.9",
    "boto3>=1.34",
    "s3fs>=2024",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "ipykernel>=6.29",
]
report = [
    "typst>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
